# lms-webai

./: .env  Cargo.toml  README.md
src/: index.html  main.rs
